# sovereign-core

./: .billing_state.json  .gitignore  Dockerfile  INTEGRATION.md  LICENSE.md  README.md  ai.txt  convert_to_pdf.py  docker-compose.yml  draft-sovereign-haip-01.txt  draft-sovereign-haip-01.xml  draft-sovereign-svtp-00.txt  extreme_latency_test.py  global_protocol_stress_test.py  index.html  institutional_validation.py  keys_registry.json  llms.txt  nuclear_stage_1.py  nuclear_verify.py  pyproject.toml  requirements.txt  server.py  setup_secure_env.ps1  sovereign_db.json  sovereign_ledger.ndjson.bak  sovereign_quickstart.py  svtp_quickstart.py  whitepaper.css  whitepaper_v5.html
.well-known/: http-message-signatures-directory.json
admin-nexus/: CreateShortcut.vbs  index.html  package-lock.json  package.json
archive/: sovereign_technical_audit.md
dashboard/: SovereignSchema.json  migrate-db.js  nuclear_reset.js  nuclear_reset.ts  package-lock.json  package.json  patch_dash.js  rebrand_dash.js  scratch_db_check.js  simulate-ledger.js  sovereign_db.json  sovereign_ledger.ndjson  test-ledger-read.js  test-scaling.ts  test_shadow_sync.js  verify_key_uniqueness.js
pillar-1-identity/: identity_logic.py
pillar-2-auth/: server.py  verify_trust.py
pillar-3-audit/: billing_engine.py  genesis_validation.py  sovereign_forensic.ndjson  sovereign_ledger.ndjson  sovereign_metabolism.py  sovereign_revenue.json
reports/: nist_audit_may_launch.txt
scripts/: audit_registry.py  extreme_drift_sim_175.py  generate_nist_audit.py  test_behavioral_drift.py
src/: app.py  audit_logger.py  billing_manager.py  config.py  escrow_manager.py  example_agent_auth.py  example_agent_auth_svtp.py  gateway.py  main.py  mint_sovereign_identity.py  mint_svtp_identity.py  p2p_mesh.py  policy_engine.py  secret_sharing.py  verify_trust.py
tmp/: bulk_inject.py
(+153 files in other folders)
