[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svtp-sdk"
version = "0.1.0"
description = "Sovereign Verification & Trust Protocol (SVTP) SDK - NIST-Compliant Identity Layer."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Sovereign AG", email = "office.sovereign.ag@gmail.com" }
]
keywords = ["svtp", "identity", "nist", "trust", "sdk", "sovereign"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://svtp-protocol.org"
Repository = "https://github.com/Sovereign-AG/sovereign-core"

[tool.hatch.build.targets.wheel]
packages = ["src/svtp_sdk"]
